--- a/index.html
+++ b/index.html
@@ -3,54 +3,51 @@
 <head>
   <meta charset="UTF-8" />
   <title>Blokz Reflex</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background-image: url('https://images.unsplash.com/photo-1600585154340-be6161a56a0c');
+      background-image: url('https://images.unsplash.com/photo-1587300003388-59208cc962cb'); /* style candy */
       background-size: cover;
       background-position: center;
       color: #fff;
-      text-align: center;
       margin: 0;
       padding: 0;
-      user-select: none;
+      overflow: hidden;
     }
 
     h1 {
-      margin-top: 20px;
+      text-align: center;
       text-shadow: 2px 2px #000;
-    }
-
-    #menu, #game, #gameOver {
-      margin-top: 20px;
+      margin-top: 10px;
     }
 
     .button {
       padding: 10px 20px;
-      margin: 10px;
+      margin: 8px;
       font-size: 16px;
       border: none;
       border-radius: 8px;
       cursor: pointer;
     }
 
-    #game {
-      display: grid;
-      grid-template-columns: repeat(6, 60px);
-      gap: 8px;
-      justify-content: center;
-      margin-top: 20px;
-      min-height: 140px;
+    #menu, #gameOver, #info {
+      text-align: center;
+      background: rgba(0,0,0,0.4);
+      padding: 10px;
+      border-radius: 12px;
+      margin: 10px auto;
+      max-width: 300px;
     }
 
     .block {
       width: 60px;
       height: 60px;
       background: #333;
-      border-radius: 8px;
+      border-radius: 10px;
+      position: absolute;
       cursor: pointer;
-      position: relative;
-      transition: background-color 0.3s ease;
+      transition: transform 0.1s;
     }
 
     .explosive { background: #e03e3e; }
@@ -63,27 +60,12 @@
       content: "💣"; position: absolute; top: 5px; right: 5px; font-size: 16px;
     }
 
-    #info {
-      margin-top: 10px;
-      font-size: 18px;
-      background: rgba(0,0,0,0.6);
-      display: inline-block;
-      padding: 8px 16px;
-      border-radius: 10px;
-    }
-
-    #gameOver {
-      display: none;
-      background: rgba(0,0,0,0.8);
-      padding: 20px;
-      border-radius: 12px;
-      margin: 40px auto;
-      width: fit-content;
-    }
+    #gameOver { display: none; }
 
     #message {
+      text-align: center;
       margin-top: 10px;
-      height: 20px;
+      font-size: 16px;
     }
   </style>
 </head>
@@ -102,10 +84,7 @@
   Score : <span id="score">0</span> | Vies : <span id="lives">2</span>
 </div>
 
-<div id="game"></div>
-
 <div id="message"></div>
-
 <div id="gameOver">
   <h2>💀 Game Over</h2>
   <p>Tu veux continuer ?</p>
@@ -116,7 +95,6 @@
 <audio id="popSound" src="https://freesound.org/data/previews/256/256113_3263906-lq.mp3"></audio>
 
 <script>
-  const gameEl = document.getElementById('game');
   const scoreEl = document.getElementById('score');
   const livesEl = document.getElementById('lives');
   const infoEl = document.getElementById('info');
@@ -125,128 +103,92 @@
   const messageEl = document.getElementById('message');
   const popSound = document.getElementById('popSound');
 
-  let score = 0;
-  let lives = 2;
-  let mode = "facile";
-  let speed = 5000;
-  let maxLives = 2;
-  let spawnInterval = null;
-  let activeBlocks = new Map(); // Map pour garder les blocks actifs et leurs timers
-
+  let score = 0, lives = 2, speed = 5000, spawnLoop, maxLives = 2;
   const mechanics = ['explosive', 'frozen', 'bomb'];
 
-  function startGame(selectedMode) {
-    mode = selectedMode;
+  function startGame(mode) {
     if (mode === "facile") { speed = 5000; maxLives = 2; }
     else if (mode === "moyen") { speed = 3000; maxLives = 1; }
     else if (mode === "impossible") { speed = 1500; maxLives = 1; }
 
     score = 0;
     lives = maxLives;
-
     scoreEl.textContent = score;
     livesEl.textContent = lives;
-    gameEl.innerHTML = '';
     infoEl.style.display = 'block';
     menuEl.style.display = 'none';
     gameOverEl.style.display = 'none';
-    messageEl.textContent = '';
-
-    activeBlocks.forEach(({timeout}) => clearTimeout(timeout));
-    activeBlocks.clear();
-
-    spawnInterval = setInterval(spawnBlock, speed / 2);
+    spawnLoop = setInterval(spawnBlock, 900);
   }
 
   function spawnBlock() {
-    // Limiter le nombre de blocks max à 6 (nombre de colonnes)
-    if (activeBlocks.size >= 6) return;
-
     const block = document.createElement('div');
     block.classList.add('block');
+    const isSpecial = Math.random() < 0.5;
 
-    let isSpecial = Math.random() < 0.5;
     if (isSpecial) {
-      let type = mechanics[Math.floor(Math.random() * mechanics.length)];
+      const type = mechanics[Math.floor(Math.random() * mechanics.length)];
       block.classList.add(type);
       block.dataset.type = type;
     } else {
       block.dataset.type = 'normal';
     }
 
-    gameEl.appendChild(block);
+    const maxW = window.innerWidth - 70;
+    const maxH = window.innerHeight - 80;
+    block.style.left = Math.random() * maxW + "px";
+    block.style.top = Math.random() * maxH + "px";
 
-    // Timer de disparition du bloc
+    document.body.appendChild(block);
+
     const timeout = setTimeout(() => {
-      if (gameEl.contains(block)) {
-        loseLife();
-        removeBlock(block);
+      if (document.body.contains(block)) {
+        if (block.dataset.type !== 'normal') loseLife();
+        block.remove();
       }
     }, speed);
 
-    // Ajouter à la map activeBlocks
-    activeBlocks.set(block, {timeout});
-
     block.addEventListener('click', () => {
-      if (!gameEl.contains(block)) return;
-
-      clearTimeout(activeBlocks.get(block).timeout);
-      activeBlocks.delete(block);
-
+      clearTimeout(timeout);
       if (block.dataset.type !== 'normal') {
-        popSound.currentTime = 0;
-        popSound.play();
         score++;
         scoreEl.textContent = score;
+        popSound.currentTime = 0;
+        popSound.play();
+      } else {
+        loseLife();
       }
-      // Si c’est un mauvais bloc (normal), on ne fait rien ni en bien ni en mal
-
-      removeBlock(block);
+      block.remove();
     });
-  }
-
-  function removeBlock(block) {
-    if (gameEl.contains(block)) {
-      gameEl.removeChild(block);
-    }
   }
 
   function loseLife() {
     lives--;
     livesEl.textContent = lives;
-    if (lives <= 0) {
-      endGame();
-    }
+    if (lives <= 0) endGame();
   }
 
   function endGame() {
-    clearInterval(spawnInterval);
-    activeBlocks.forEach(({timeout}, block) => clearTimeout(timeout));
-    activeBlocks.clear();
+    clearInterval(spawnLoop);
     gameOverEl.style.display = 'block';
     messageEl.textContent = '';
   }
 
   function watchAd() {
-    if (mode !== 'facile') {
-      messageEl.textContent = "🚫 Pas de vie supplémentaire en mode moyen ou impossible.";
-      return;
-    }
-    messageEl.textContent = "🎥 Tu as regardé une pub (imaginée) ! Vie offerte.";
     lives = 1;
     livesEl.textContent = lives;
     gameOverEl.style.display = 'none';
-    spawnInterval = setInterval(spawnBlock, speed / 2);
+    messageEl.textContent = "🎥 Tu as (imaginé) regardé une pub !";
+    spawnLoop = setInterval(spawnBlock, 900);
   }
 
   function restartGame() {
     menuEl.style.display = 'block';
     infoEl.style.display = 'none';
-    gameEl.innerHTML = '';
     gameOverEl.style.display = 'none';
-    messageEl.textContent = '';
+    document.querySelectorAll('.block').forEach(b => b.remove());
   }
 </script>
-
 </body>
 </html>
+
