--- a/public/index.html
+++ b/public/index.html
@@ -1,244 +1,24 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8" />
-<title>Blokz Reflex - Client avec difficultés</title>
-<style>
-  body { font-family: Arial, sans-serif; margin: 20px; background: #f0f0f0; }
-  #login, #lobby, #game { max-width: 400px; margin: auto; padding: 20px; background: white; border-radius: 8px; box-shadow: 0 0 8px #ccc;}
-  #lobby, #game { display: none; }
-  #blocks { display: grid; grid-template-columns: repeat(4, 60px); grid-gap: 10px; margin-top: 20px; }
-  .block { width: 60px; height: 60px; background: #4caf50; cursor: pointer; border-radius: 6px; display: flex; justify-content: center; align-items: center; color: white; font-weight: bold; font-size: 24px; user-select: none; }
-  .block.hidden { background: #ddd; cursor: default; }
-  #onlineUsers { margin-top: 10px; }
-  button { margin-top: 10px; padding: 8px 12px; border: none; background: #2196f3; color: white; border-radius: 4px; cursor: pointer; }
-  button:disabled { background: #aaa; cursor: not-allowed; }
-  #scoreboard { margin-top: 20px; }
-  #winner { font-size: 20px; font-weight: bold; margin-top: 20px; }
-  label { margin-right: 10px; }
-</style>
+  <meta charset="UTF-8" />
+  <title>Blokz Reflex</title>
+  <script src="https://cdn.socket.io/4.5.1/socket.io.min.js"></script>
 </head>
 <body>
+  <h1>Connexion au serveur...</h1>
+  <p id="status">En attente...</p>
 
-<div id="login">
-  <h2>Connexion</h2>
-  <input id="pseudoInput" placeholder="Ton pseudo" autocomplete="off" /><br/>
-  <button id="btnLogin">Se connecter</button>
-</div>
+  <script>
+    const socket = io();
 
-<div id="lobby">
-  <h2>Bienvenue <span id="playerName"></span></h2>
-  <div>
-    <strong>Joueurs en ligne :</strong>
-    <ul id="onlineUsers"></ul>
-  </div>
-  <div>
-    <input id="opponentPseudo" placeholder="Pseudo adversaire" autocomplete="off" />
-  </div>
-  <div>
-    <label><input type="radio" name="difficulty" value="easy" checked /> Facile</label>
-    <label><input type="radio" name="difficulty" value="medium" /> Moyen</label>
-    <label><input type="radio" name="difficulty" value="hard" /> Impossible</label>
-  </div>
-  <button id="btnCreateGame">Créer partie</button>
-</div>
-
-<div id="game">
-  <h2>Jeu Blokz Reflex</h2>
-  <div id="scoreboard">Scores : <span id="scorePlayer"></span> vs <span id="scoreOpponent"></span></div>
-  <div>Vies restantes : <span id="livesDisplay"></span></div>
-  <div id="blocks"></div>
-  <button id="btnQuitGame">Quitter la partie</button>
-  <div id="winner"></div>
-</div>
-
-<script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
-<script>
-  // === CONFIG ===
-  const DIFFICULTY_SETTINGS = {
-    easy: { blockDuration: 5000, lives: 2 },
-    medium: { blockDuration: 3000, lives: 1 },
-    hard: { blockDuration: 1500, lives: 1 },
-  };
-
-  // === VARIABLES ===
-  const socket = io('https://TON_SERVEUR_BACKEND_RAILWAY.railway.app'); // <-- remplace par ton URL Railway
-  let player = null;
-  let roomId = null;
-  let opponent = null;
-  let scores = {};
-  let difficulty = 'easy';
-  let lives = 2;
-  let blockTimers = [];
-
-  // === DOM ===
-  const loginDiv = document.getElementById('login');
-  const lobbyDiv = document.getElementById('lobby');
-  const gameDiv = document.getElementById('game');
-  const pseudoInput = document.getElementById('pseudoInput');
-  const btnLogin = document.getElementById('btnLogin');
-  const playerNameSpan = document.getElementById('playerName');
-  const onlineUsersList = document.getElementById('onlineUsers');
-  const opponentPseudoInput = document.getElementById('opponentPseudo');
-  const btnCreateGame = document.getElementById('btnCreateGame');
-  const blocksDiv = document.getElementById('blocks');
-  const scorePlayerSpan = document.getElementById('scorePlayer');
-  const scoreOpponentSpan = document.getElementById('scoreOpponent');
-  const btnQuitGame = document.getElementById('btnQuitGame');
-  const winnerDiv = document.getElementById('winner');
-  const livesDisplay = document.getElementById('livesDisplay');
-
-  // === FONCTIONS ===
-  btnLogin.onclick = () => {
-    const pseudo = pseudoInput.value.trim();
-    if (!pseudo) return alert('Entre un pseudo');
-    player = { id: Date.now().toString(), pseudo };
-    socket.emit('login', player);
-    loginDiv.style.display = 'none';
-    lobbyDiv.style.display = 'block';
-    playerNameSpan.textContent = pseudo;
-  };
-
-  socket.on('onlineUsers', users => {
-    onlineUsersList.innerHTML = '';
-    users.forEach(p => {
-      if (p !== player.pseudo) {
-        const li = document.createElement('li');
-        li.textContent = p;
-        onlineUsersList.appendChild(li);
-      }
+    socket.on("connect", () => {
+      document.getElementById("status").innerText = "✅ Connecté au serveur";
     });
-  });
 
-  btnCreateGame.onclick = () => {
-    const opponentPseudo = opponentPseudoInput.value.trim();
-    if (!opponentPseudo) return alert('Entre le pseudo de l\'adversaire');
-    difficulty = document.querySelector('input[name="difficulty"]:checked').value;
-    opponent = { id: opponentPseudo.split('').reduce((a,c)=>a+c.charCodeAt(0),''), pseudo: opponentPseudo };
-    roomId = `game_${player.id}_${opponent.id}`;
-    lives = DIFFICULTY_SETTINGS[difficulty].lives;
-    socket.emit('createGame', { hostId: player.id, guestId: opponent.id, difficulty });
-    lobbyDiv.style.display = 'none';
-    gameDiv.style.display = 'block';
-    winnerDiv.textContent = '';
-    initGame();
-  };
-
-  socket.on('gameCreated', ({ roomId: id }) => {
-    roomId = id;
-    socket.emit('joinGame', { roomId });
-  });
-
-  socket.on('gameStart', () => {
-    winnerDiv.textContent = '';
-    resetBlocks();
-  });
-
-  function initGame() {
-    blocksDiv.innerHTML = '';
-    scores[player.id] = 0;
-    scores[opponent.id] = 0;
-    updateScore();
-    updateLives();
-
-    const blockCount = 8;
-    for (let i = 0; i < blockCount; i++) {
-      const block = document.createElement('div');
-      block.className = 'block';
-      block.textContent = i + 1;
-      block.dataset.index = i;
-      block.onclick = () => onBlockClick(block);
-      blocksDiv.appendChild(block);
-      startBlockTimer(block);
-    }
-  }
-
-  function updateScore() {
-    scorePlayerSpan.textContent = scores[player.id] || 0;
-    scoreOpponentSpan.textContent = scores[opponent.id] || 0;
-  }
-
-  function updateLives() {
-    livesDisplay.textContent = lives;
-  }
-
-  // Lance le timer de disparition du bloc selon la difficulté
-  function startBlockTimer(block) {
-    const duration = DIFFICULTY_SETTINGS[difficulty].blockDuration;
-    const timer = setTimeout(() => {
-      if (!block.classList.contains('hidden')) {
-        // Le joueur n'a pas cliqué à temps, perd une vie
-        lives--;
-        updateLives();
-        block.classList.add('hidden');
-        block.style.pointerEvents = 'none';
-
-        if (lives <= 0) {
-          endGame(false);
-        }
-      }
-    }, duration);
-    blockTimers.push(timer);
-  }
-
-  function onBlockClick(block) {
-    if (block.classList.contains('hidden')) return;
-    block.classList.add('hidden');
-    block.style.pointerEvents = 'none';
-    clearTimersForBlock(block);
-
-    scores[player.id]++;
-    updateScore();
-    socket.emit('blockClicked', { roomId, playerId: player.id, score: scores[player.id] });
-
-    // Si tous les blocs sont cliqués, victoire
-    if ([...blocksDiv.children].every(b => b.classList.contains('hidden'))) {
-      endGame(true);
-    }
-  }
-
-  function clearTimersForBlock(block) {
-    // Optionnel: ici on n'associe pas timer par bloc, on clear tout proprement
-    blockTimers.forEach(t => clearTimeout(t));
-    blockTimers = [];
-
-    // Redémarre timers sur blocs non cliqués
-    [...blocksDiv.children].forEach(b => {
-      if (!b.classList.contains('hidden')) startBlockTimer(b);
+    socket.on("disconnect", () => {
+      document.getElementById("status").innerText = "❌ Déconnecté du serveur";
     });
-  }
-
-  socket.on('updateScore', (updatedScores) => {
-    scores = updatedScores;
-    updateScore();
-  });
-
-  socket.on('gameEnded', ({ winnerId }) => {
-    endGame(winnerId === player.id);
-  });
-
-  function endGame(won) {
-    winnerDiv.textContent = won ? '🎉 Tu as gagné !' : '😞 Tu as perdu...';
-    lives = 0;
-    updateLives();
-    [...blocksDiv.children].forEach(b => b.style.pointerEvents = 'none');
-    // Envoie fin partie au serveur si tu as gagné
-    if (won) socket.emit('gameOver', { roomId, winnerId: player.id });
-  }
-
-  btnQuitGame.onclick = () => {
-    roomId = null;
-    opponent = null;
-    scores = {};
-    difficulty = 'easy';
-    lives = 2;
-    blockTimers.forEach(t => clearTimeout(t));
-    blockTimers = [];
-    gameDiv.style.display = 'none';
-    lobbyDiv.style.display = 'block';
-  };
-
-</script>
-
+  </script>
 </body>
 </html>
