--- a/public/index.html
+++ b/public/index.html
@@ -1,30 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
-  <title>Blokz Reflex</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Blokz Reflex - Multijoueur</title>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-  <h1>Bienvenue sur Blokz Reflex</h1>
-  <select id="difficulty">
-    <option value="easy">Facile</option>
-    <option value="medium">Moyen</option>
-    <option value="hard">Impossible</option>
-  </select>
-  <button onclick="startGame()">Commencer</button>
-
+  <h1>Blokz Reflex - Duel !</h1>
+  <div id="timer">Temps : 30s</div>
+  <div class="game-container">
+    <div class="player" id="player1">
+      <h2>Joueur 1</h2>
+      <div class="grid" id="grid1"></div>
+      <div class="score" id="score1">Score : 0</div>
+    </div>
+    <div class="player" id="player2">
+      <h2>Joueur 2</h2>
+      <div class="grid" id="grid2"></div>
+      <div class="score" id="score2">Score : 0</div>
+    </div>
+  </div>
   <script src="/socket.io/socket.io.js"></script>
-  <script>
-    const socket = io();
-
-    socket.on("connect", () => {
-      console.log("✅ Connecté au serveur !");
-    });
-
-    function startGame() {
-      const difficulty = document.getElementById("difficulty").value;
-      alert("Mode choisi : " + difficulty);
-      // ici tu pourras lancer la vraie logique du jeu
-    }
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
