--- a/index.html
+++ b/index.html
@@ -1,34 +1,32 @@
+from pathlib import Path
+
+# Nouveau code HTML avec temps de disparition de 0.2 secondes pour les blocs
+html_code = """
 <!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <title>Blokz Reflex Mobile</title>
+  <title>Blokz Reflex</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background-image: url('https://i.imgur.com/FoC9cYQ.jpeg'); /* Candy Crush style */
+      background-image: url('https://images.unsplash.com/photo-1629751270641-640bb3a2f481'); /* style candy crush */
       background-size: cover;
       background-position: center;
+      color: #fff;
+      text-align: center;
       margin: 0;
       padding: 0;
-      text-align: center;
-      overflow: hidden;
-      color: #fff;
     }
 
     h1 {
-      margin: 10px;
-      font-size: 24px;
+      margin-top: 10px;
       text-shadow: 2px 2px #000;
     }
 
-    #info {
-      font-size: 16px;
-      background: rgba(0,0,0,0.5);
-      padding: 8px 12px;
-      border-radius: 10px;
-      display: inline-block;
+    #menu, #game, #gameOver {
+      margin-top: 10px;
     }
 
     .button {
@@ -37,119 +35,179 @@
       font-size: 16px;
       border: none;
       border-radius: 8px;
-      background: #ff69b4;
-      color: white;
       cursor: pointer;
+    }
+
+    #game {
+      position: relative;
+      width: 100%;
+      height: 70vh;
+      overflow: hidden;
     }
 
     .block {
       width: 60px;
       height: 60px;
-      background: #fff;
-      border-radius: 10px;
-      position: absolute;
-      box-shadow: 0 0 5px #000;
+      background: #ff69b4;
+      border-radius: 12px;
       cursor: pointer;
-      animation: fadeout 0.5s forwards;
+      position: absolute;
+      transition: all 0.2s;
     }
 
-    @keyframes fadeout {
-      from {opacity: 1;}
-      to {opacity: 0;}
+    #info {
+      margin-top: 10px;
+      font-size: 18px;
+      background: rgba(0,0,0,0.6);
+      display: inline-block;
+      padding: 8px 16px;
+      border-radius: 10px;
     }
 
     #gameOver {
-      position: absolute;
-      top: 40%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+      display: none;
       background: rgba(0,0,0,0.8);
       padding: 20px;
       border-radius: 12px;
-      display: none;
+      margin: 20px auto;
+      width: fit-content;
+    }
+
+    #message {
+      margin-top: 10px;
+      height: 20px;
     }
   </style>
 </head>
 <body>
-  <h1>Blokz Reflex 🍬</h1>
 
-  <div id="menu">
-    <p>Choisis ton mode :</p>
-    <button class="button" onclick="startGame('facile')">Facile</button>
-    <button class="button" onclick="startGame('moyen')">Moyen</button>
-    <button class="button" onclick="startGame('impossible')">Impossible</button>
-  </div>
+<h1>🍬 Blokz Reflex</h1>
 
-  <div id="info" style="display:none;">
-    Score: <span id="score">0</span> | Vies: <span id="lives">2</span>
-  </div>
+<div id="menu">
+  <p>Choisis ton mode :</p>
+  <button class="button" onclick="startGame('facile')">Facile</button>
+  <button class="button" onclick="startGame('moyen')">Moyen</button>
+  <button class="button" onclick="startGame('impossible')">Impossible</button>
+</div>
 
-  <div id="gameOver">
-    <h2>Game Over 💀</h2>
-    <button class="button" onclick="restartGame()">Recommencer</button>
-  </div>
+<div id="info" style="display:none;">
+  Score : <span id="score">0</span> | Vies : <span id="lives">2</span>
+</div>
+
+<div id="game"></div>
+
+<div id="message"></div>
+
+<div id="gameOver">
+  <h2>💀 Game Over</h2>
+  <p>Tu veux continuer ?</p>
+  <button class="button" onclick="watchAd()">📺 Regarder une pub</button>
+  <button class="button" onclick="restartGame()">🔁 Recommencer</button>
+</div>
 
 <script>
-  let score = 0;
-  let lives = 2;
-  let speed = 500;
-  let spawnInterval;
+  const gameEl = document.getElementById('game');
   const scoreEl = document.getElementById('score');
   const livesEl = document.getElementById('lives');
+  const infoEl = document.getElementById('info');
+  const menuEl = document.getElementById('menu');
+  const gameOverEl = document.getElementById('gameOver');
+  const messageEl = document.getElementById('message');
 
-  function startGame(mode) {
-    if (mode === 'facile') { speed = 500; lives = 2; }
-    else if (mode === 'moyen') { speed = 500; lives = 1; }
-    else if (mode === 'impossible') { speed = 500; lives = 1; }
+  let score = 0;
+  let lives = 2;
+  let mode = "facile";
+  let spawnRate = 800;
+  let disappearTime = 5000;
+  let maxLives = 2;
+  let spawnLoop;
+
+  function startGame(selectedMode) {
+    mode = selectedMode;
+    if (mode === "facile") { disappearTime = 5000; maxLives = 2; spawnRate = 800; }
+    else if (mode === "moyen") { disappearTime = 3000; maxLives = 1; spawnRate = 800; }
+    else if (mode === "impossible") { disappearTime = 200; maxLives = 1; spawnRate = 2000; }
 
     score = 0;
+    lives = maxLives;
+
     scoreEl.textContent = score;
     livesEl.textContent = lives;
-    document.getElementById('menu').style.display = 'none';
-    document.getElementById('info').style.display = 'block';
-    spawnInterval = setInterval(spawnBlock, 700);
+    gameEl.innerHTML = '';
+    infoEl.style.display = 'block';
+    menuEl.style.display = 'none';
+    gameOverEl.style.display = 'none';
+
+    spawnLoop = setInterval(spawnBlock, spawnRate);
   }
 
   function spawnBlock() {
     const block = document.createElement('div');
     block.classList.add('block');
 
-    const x = Math.random() * (window.innerWidth - 70);
-    const y = Math.random() * (window.innerHeight - 70);
+    const gameRect = gameEl.getBoundingClientRect();
+    const maxX = gameEl.clientWidth - 60;
+    const maxY = gameEl.clientHeight - 60;
+
+    const x = Math.random() * maxX;
+    const y = Math.random() * maxY;
+
     block.style.left = x + 'px';
     block.style.top = y + 'px';
 
-    block.addEventListener('click', () => {
-      score++;
-      scoreEl.textContent = score;
-      block.remove();
-    });
+    gameEl.appendChild(block);
 
-    document.body.appendChild(block);
-
-    setTimeout(() => {
-      if (document.body.contains(block)) {
-        block.remove();
+    const timeout = setTimeout(() => {
+      if (gameEl.contains(block)) {
         loseLife();
+        gameEl.removeChild(block);
       }
-    }, speed);
+    }, disappearTime);
+
+    block.addEventListener('click', () => {
+      clearTimeout(timeout);
+      score += 1;
+      scoreEl.textContent = score;
+      gameEl.removeChild(block);
+    });
   }
 
   function loseLife() {
     lives--;
     livesEl.textContent = lives;
-    if (lives <= 0) endGame();
+    if (lives <= 0) {
+      endGame();
+    }
   }
 
   function endGame() {
-    clearInterval(spawnInterval);
-    document.getElementById('gameOver').style.display = 'block';
+    clearInterval(spawnLoop);
+    gameOverEl.style.display = 'block';
+    messageEl.textContent = '';
+  }
+
+  function watchAd() {
+    messageEl.textContent = "🎥 Tu as regardé une pub (imaginée) !";
+    lives = 1;
+    livesEl.textContent = lives;
+    gameOverEl.style.display = 'none';
+    spawnLoop = setInterval(spawnBlock, spawnRate);
   }
 
   function restartGame() {
-    document.getElementById('gameOver').style.display = 'none';
-    document.getElementById('menu').style.display = 'block';
+    menuEl.style.display = 'block';
+    infoEl.style.display = 'none';
+    gameEl.innerHTML = '';
+    gameOverEl.style.display = 'none';
+    messageEl.textContent = '';
   }
 </script>
 </body>
 </html>
+"""
+
+# Enregistrement du fichier
+output_path = Path("/mnt/data/index.html")
+output_path.write_text(html_code, encoding="utf-8")
+output_path
+
